--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "case_management_system",
+  "name": "cms",
   "version": "1.0.0",
   "description": "case management system",
   "main": "app.js",
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "Lisa Alexander",
+  "author": "Lisa A",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
     "bootstrap-datetimepicker": "0.0.7",
     "ejs": "^2.3.4",
+    "enum": "^2.4.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "method-override": "^2.3.5",
